[gd_scene load_steps=25 format=3 uid="uid://dnqdsgkyde5ys"]

[ext_resource type="Script" path="res://scripts/level1/act_1.gd" id="1_75wj8"]
[ext_resource type="PackedScene" uid="uid://b8oisyfhyx2yr" path="res://scenes/level1/act1_world_environment.tscn" id="1_j6tjs"]
[ext_resource type="PackedScene" uid="uid://cno2tfxkcdwjx" path="res://scenes/camera_controller.tscn" id="2_vcigm"]
[ext_resource type="PackedScene" uid="uid://dq8d4kwgig1w8" path="res://scenes/level1/soccer_field_world.tscn" id="3_wf22a"]
[ext_resource type="PackedScene" uid="uid://dd7y7f0ti7n53" path="res://scenes/player.tscn" id="4_8dl31"]
[ext_resource type="PackedScene" uid="uid://bhkj1mdxm4ft2" path="res://scenes/controller.tscn" id="5_8qe52"]
[ext_resource type="SpriteFrames" uid="uid://c0xj6n41r3c1j" path="res://resources/player_spriteframes.tres" id="6_wagr6"]
[ext_resource type="PackedScene" uid="uid://bk8wo5fenailq" path="res://scenes/ball.tscn" id="7_xq8ao"]
[ext_resource type="PackedScene" uid="uid://de54qalm0kq4f" path="res://scenes/goal.tscn" id="8_2nmo7"]
[ext_resource type="PackedScene" uid="uid://d13byd12eh5y7" path="res://scenes/ai.tscn" id="9_2x0ki"]
[ext_resource type="SpriteFrames" uid="uid://b5y2k0oe4jdi6" path="res://resources/adversary_spriteframes.tres" id="10_0rft1"]
[ext_resource type="PackedScene" uid="uid://3y4snk0eo4mp" path="res://scenes/ui.tscn" id="11_ffwmr"]
[ext_resource type="PackedScene" uid="uid://rxuskqewfa7k" path="res://scenes/control_suppressor.tscn" id="13_hpf6u"]
[ext_resource type="Script" path="res://scripts/level1/level_1_script.gd" id="14_eau2p"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="14_ok3f3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="15_e8cbd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="16_4ihqv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="17_abldk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="18_mp8jo"]

[sub_resource type="Animation" id="Animation_0c4pc"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutScenePlayer/CanvasLayer/Label:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CameraController/Camera3D:rotation:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.523599, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CameraController/Camera3D:rotation:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CameraController/Camera3D:rotation:z")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CameraController:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-55.43, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../CameraController:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../CameraController:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../MainPlayer:left_right_axis")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lcg1f"]
resource_name = "intro"
length = 15.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CutScenePlayer/CanvasLayer/ColorRect:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5.5, 8.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CutScenePlayer/CanvasLayer/Label:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2.5, 4, 5.5)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CutScenePlayer/CanvasLayer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CameraController/Camera3D:rotation:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.349066, -0.25, 0, 0.25, 0, -0.349066, -0.25, 0, 0.25, 0, 0.0872665, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5.5, 15)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../CameraController:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-58.2871, -0.25, 0, 1.46667, -0.0123138, -33.4634, -4.00002, 0.00431061, 0.25, 0),
"times": PackedFloat32Array(5.5, 15)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../CameraController:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1.54991, -0.25, 0, 0.25, 0, 0.278919, -4, -0.000630468, 0.25, 0),
"times": PackedFloat32Array(5.5, 15)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../CameraController:position:z")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(6.80178, -0.25, 0, 0.25, 0, -1.71129, -4, 0.00422263, 0.25, 0),
"times": PackedFloat32Array(5.5, 15)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../MainPlayer:left_right_axis")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.45, -0.25, 0, 0.25, 0, 0.45, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5.26667, 5.5, 14.7333, 15)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oomc5"]
_data = {
"RESET": SubResource("Animation_0c4pc"),
"intro": SubResource("Animation_lcg1f")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_og63g"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_m5c52"]

[node name="Act1" type="Node3D"]
process_mode = 1
script = ExtResource("1_75wj8")
starts_with_cut_scene = true

[node name="WorldEnvironment" parent="." instance=ExtResource("1_j6tjs")]

[node name="Act1SkyBox" parent="WorldEnvironment" index="1" node_paths=PackedStringArray("camera_controller")]
camera_controller = NodePath("../../CameraController")

[node name="CameraController" parent="." node_paths=PackedStringArray("subject") instance=ExtResource("2_vcigm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.43, 3, 8)
subject = NodePath("../MainPlayer")

[node name="Camera3D" parent="CameraController" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.866026, 0.5, 0, -0.5, 0.866026, 0, 1.1, 10)

[node name="World" parent="." instance=ExtResource("3_wf22a")]

[node name="MainPlayer" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_8dl31")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -55.4298, 0.077, 0)
sprite = NodePath("AnimatedSprite3D")

[node name="Controller" parent="MainPlayer" node_paths=PackedStringArray("player") instance=ExtResource("5_8qe52")]
player = NodePath("..")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="MainPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.56633, 0)
sorting_use_aabb_center = false
gi_mode = 0
modulate = Color(0.8, 0.8, 0.8, 1)
sprite_frames = ExtResource("6_wagr6")
animation = &"celebrate"

[node name="Ball" parent="." instance=ExtResource("7_xq8ao")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.4986, 0.255664, 0)
max_speed = 20.0

[node name="GoalLeft" parent="." instance=ExtResource("8_2nmo7")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -22.4087, 0, 0)

[node name="GoalRight" parent="." instance=ExtResource("8_2nmo7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 22.4937, 0, 0)

[node name="OpponentPlayer" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("4_8dl31")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.507, 0, 0)
sprite = NodePath("AnimatedSprite3D")
run_forward_velocity = 4.0
run_backward_velocity = 3.0

[node name="AI" parent="OpponentPlayer" node_paths=PackedStringArray("player", "ball", "home_goal", "away_goal") instance=ExtResource("9_2x0ki")]
player = NodePath("..")
ball = NodePath("../../Ball")
home_goal = NodePath("../../GoalRight")
away_goal = NodePath("../../GoalLeft")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="OpponentPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.557838, 0)
modulate = Color(0.8, 0.8, 0.8, 1)
sprite_frames = ExtResource("10_0rft1")
animation = &"celebrate"

[node name="UI" parent="." node_paths=PackedStringArray("camera_controller", "player") instance=ExtResource("11_ffwmr")]
camera_controller = NodePath("../CameraController")
player = NodePath("../MainPlayer")

[node name="ControlSuppressor" parent="." node_paths=PackedStringArray("controlled_nodes") instance=ExtResource("13_hpf6u")]
controlled_nodes = [NodePath("../CameraController"), NodePath("../MainPlayer/Controller"), NodePath("../OpponentPlayer/AI")]

[node name="Level1Script" type="Node3D" parent="." node_paths=PackedStringArray("control_suppressor", "cut_scene_player", "opponent_ai")]
script = ExtResource("14_eau2p")
control_suppressor = NodePath("../ControlSuppressor")
cut_scene_player = NodePath("CutScenePlayer")
opponent_ai = NodePath("../OpponentPlayer/AI")

[node name="StateChart" type="Node" parent="Level1Script"]
script = ExtResource("14_ok3f3")

[node name="Root" type="Node" parent="Level1Script/StateChart"]
script = ExtResource("15_e8cbd")

[node name="Foreground Events" type="Node" parent="Level1Script/StateChart/Root"]
script = ExtResource("16_4ihqv")
initial_state = NodePath("intro cutscene")

[node name="intro cutscene" type="Node" parent="Level1Script/StateChart/Root/Foreground Events"]
script = ExtResource("17_abldk")

[node name="to walk to field" type="Node" parent="Level1Script/StateChart/Root/Foreground Events/intro cutscene"]
script = ExtResource("18_mp8jo")
to = NodePath("../../walk to field")
event = &"intro cutscene to walk to field"
delay_in_seconds = "0.0"

[node name="walk to field" type="Node" parent="Level1Script/StateChart/Root/Foreground Events"]
script = ExtResource("17_abldk")

[node name="to gameplay" type="Node" parent="Level1Script/StateChart/Root/Foreground Events/walk to field"]
script = ExtResource("18_mp8jo")
to = NodePath("../../gameplay")
event = &"walk to field to gameplay"
delay_in_seconds = "0.0"

[node name="to game over" type="Node" parent="Level1Script/StateChart/Root/Foreground Events/walk to field"]
script = ExtResource("18_mp8jo")
to = NodePath("../../game over")
event = &"walk to field to game over"
delay_in_seconds = "0.0"

[node name="gameplay" type="Node" parent="Level1Script/StateChart/Root/Foreground Events"]
script = ExtResource("17_abldk")

[node name="to game over" type="Node" parent="Level1Script/StateChart/Root/Foreground Events/gameplay"]
script = ExtResource("18_mp8jo")
to = NodePath("../../game over")
event = &"gameplay to game over"
delay_in_seconds = "0.0"

[node name="game over" type="Node" parent="Level1Script/StateChart/Root/Foreground Events"]
script = ExtResource("17_abldk")

[node name="Background Events" type="Node" parent="Level1Script/StateChart/Root"]
script = ExtResource("16_4ihqv")
initial_state = NodePath("peaceful clouds")

[node name="peaceful clouds" type="Node" parent="Level1Script/StateChart/Root/Background Events"]
script = ExtResource("17_abldk")

[node name="covering up" type="Node" parent="Level1Script/StateChart/Root/Background Events"]
script = ExtResource("17_abldk")

[node name="dark clouds" type="Node" parent="Level1Script/StateChart/Root/Background Events"]
script = ExtResource("17_abldk")

[node name="vortex clouds" type="Node" parent="Level1Script/StateChart/Root/Background Events"]
script = ExtResource("17_abldk")

[node name="CutScenePlayer" type="AnimationPlayer" parent="Level1Script"]
libraries = {
"": SubResource("AnimationLibrary_oomc5")
}

[node name="CanvasLayer" type="CanvasLayer" parent="Level1Script/CutScenePlayer"]
layer = 11
visible = false

[node name="ColorRect" type="ColorRect" parent="Level1Script/CutScenePlayer/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="Level1Script/CutScenePlayer/CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Pine Signal Interactive
presents"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TriggerGameplayArea3D" type="Area3D" parent="Level1Script"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.3323, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level1Script/TriggerGameplayArea3D"]
shape = SubResource("SphereShape3D_og63g")

[node name="TriggerGameOverArea3D" type="Area3D" parent="Level1Script"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level1Script/TriggerGameOverArea3D"]
shape = SubResource("WorldBoundaryShape3D_m5c52")

[connection signal="display_stamina" from="MainPlayer" to="UI" method="_on_display_stamina"]
[connection signal="facing_left" from="MainPlayer" to="Ball" method="_on_facing_left"]
[connection signal="facing_right" from="MainPlayer" to="Ball" method="_on_facing_right"]
[connection signal="hide_stamina" from="MainPlayer" to="UI" method="_on_hide_stamina"]
[connection signal="update_stamina_value" from="MainPlayer" to="UI" method="_on_update_stamina_value"]
[connection signal="scored" from="GoalLeft" to="." method="_on_goal_left_scored"]
[connection signal="scored" from="GoalLeft" to="OpponentPlayer/AI" method="_on_away_scored"]
[connection signal="scored" from="GoalRight" to="." method="_on_goal_right_scored"]
[connection signal="facing_left" from="OpponentPlayer" to="Ball" method="_on_facing_left"]
[connection signal="facing_right" from="OpponentPlayer" to="Ball" method="_on_facing_right"]
[connection signal="state_entered" from="Level1Script/StateChart/Root/Foreground Events/intro cutscene" to="Level1Script" method="_on_intro_cutscene_state_entered"]
[connection signal="state_entered" from="Level1Script/StateChart/Root/Foreground Events/walk to field" to="Level1Script" method="_on_walk_to_field_state_entered"]
[connection signal="state_entered" from="Level1Script/StateChart/Root/Foreground Events/gameplay" to="Level1Script" method="_on_gameplay_state_entered"]
[connection signal="body_entered" from="Level1Script/TriggerGameplayArea3D" to="Level1Script" method="_on_trigger_gameplay_area_3d_body_entered"]
[connection signal="body_entered" from="Level1Script/TriggerGameOverArea3D" to="Level1Script" method="_on_trigger_game_over_area_3d_body_entered"]

[editable path="WorldEnvironment"]
[editable path="CameraController"]
